# Practicum1

./: CMakeLists.txt  README.md  main.cpp  solve.cpp  solve.h  test.cpp
