cmake_minimum_required(VERSION 3.8)
project(prac1)
set(CMAKE_CXX_STANDART 14)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${prac1_SOURCE_DIR}/bin)
if (APPLE)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
endif()
find_package(GTest REQUIRED)
find_package(Threads REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
add_executable(RunTests main_test.cpp solve.cpp test.cpp)
target_link_libraries(RunTests ${GTEST_LIBRARIES} Threads::Threads)
enable_testing()
add_executable(prog solve.cpp main.cpp)
